jomini_derive/tests/compile-fail/invalid_token_value.rs
#[allow(dead_code)]
use jomini_derive::JominiDeserialize;

#[derive(JominiDeserialize)]
pub struct Model {
    #[jomini(token = "not-a-number")]
    field: String,
}

fn main() {}
