jomini_derive/tests/compile-fail/invalid_token_value.stderr
error: Failed to parse jomini attribute: expected integer literal
 --> tests/compile-fail/invalid_token_value.rs:7:5
  |
7 |     field: String,
  |     ^^^^^
